--- a/Statemachine_ST7783/App/CSharp/LoggerNet35/Logger/Logger/Logger.csproj
+++ b/Statemachine_ST7783/App/CSharp/LoggerNet35/Logger/Logger/Logger.csproj
@@ -128,7 +128,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\HeaderFooterCurrentTimeInsert32x32.png" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
