fixing net45 version.

--- a/Statemachine_ST7783/App/CSharp/LoggerNet35/Logger/Logger/LoggerNet45.csproj
+++ b/Statemachine_ST7783/App/CSharp/LoggerNet35/Logger/Logger/LoggerNet45.csproj
@@ -69,16 +69,71 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataLogger.cs" />
+    <Compile Include="DateTimeTabPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DateTimeTabPage.Designer.cs">
+      <DependentUpon>DateTimeTabPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ImageResource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ImageResource.resx</DependentUpon>
+    </Compile>
+    <Compile Include="LogFilesTabPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="LogFilesTabPage.Designer.cs">
+      <DependentUpon>LogFilesTabPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LoggerTabPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="LoggerTabPage.Designer.cs">
+      <DependentUpon>LoggerTabPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainTabPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MainTabPage.Designer.cs">
+      <DependentUpon>MainTabPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TemperatureChartTabPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TemperatureChartTabPage.Designer.cs">
+      <DependentUpon>TemperatureChartTabPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TemperatureTabPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TemperatureTabPage.Designer.cs">
+      <DependentUpon>TemperatureTabPage.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="DateTimeTabPage.resx">
+      <DependentUpon>DateTimeTabPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImageResource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ImageResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LogFilesTabPage.resx">
+      <DependentUpon>LogFilesTabPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainTabPage.resx">
+      <DependentUpon>MainTabPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\ResourcesNet45.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -90,6 +145,12 @@
       <DependentUpon>ResourcesNet45.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TemperatureChartTabPage.resx">
+      <DependentUpon>TemperatureChartTabPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TemperatureTabPage.resx">
+      <DependentUpon>TemperatureTabPage.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\SettingsNet45.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>SettingsNet45.Designer.cs</LastGenOutput>
@@ -132,8 +193,23 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Content Include="Resources\Back16x16.png" />
+    <Content Include="Resources\Cab32x32.png" />
+    <Content Include="Resources\Chart32x32.png" />
+    <Content Include="Resources\Clock32x32.png" />
+    <Content Include="Resources\Connection32x32.png" />
+    <Content Include="Resources\DataBase32x32.png" />
+    <Content Include="Resources\FileOpen32x32.png" />
+    <Content Include="Resources\QueryDelete32x32.png" />
+    <Content Include="Resources\Refresh16x16.png" />
+    <Content Include="Resources\Refresh32x32.png" />
+    <Content Include="Resources\RefreshAll32x32.png" />
+    <Content Include="Resources\RefreshBlue16x16.png" />
+    <Content Include="Resources\RefreshBlue32x32.png" />
+    <Content Include="Resources\Remove32x32.png" />
+    <Content Include="Resources\Save16x16.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
