--- a/Statemachine_ST7783_ADC/App/CSharp/LoggerNet35/Logger/Logger/LoggerNet45.csproj
+++ b/Statemachine_ST7783_ADC/App/CSharp/LoggerNet35/Logger/Logger/LoggerNet45.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{52EF6F31-3584-4ABF-81D9-550652C86425}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsApplication1</RootNamespace>
+    <RootNamespace>Logger</RootNamespace>
     <AssemblyName>Logger</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -69,6 +69,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChartTabPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ChartTabPage.Designer.cs">
+      <DependentUpon>ChartTabPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CurrentTabPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CurrentTabPage.Designer.cs">
+      <DependentUpon>CurrentTabPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataLogger.cs" />
     <Compile Include="DateTimeTabPage.cs">
       <SubType>UserControl</SubType>
@@ -107,18 +119,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TemperatureChartTabPage.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="TemperatureChartTabPage.Designer.cs">
-      <DependentUpon>TemperatureChartTabPage.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TemperatureTabPage.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="TemperatureTabPage.Designer.cs">
-      <DependentUpon>TemperatureTabPage.cs</DependentUpon>
-    </Compile>
+    <EmbeddedResource Include="ChartTabPage.resx">
+      <DependentUpon>ChartTabPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CurrentTabPage.resx">
+      <DependentUpon>CurrentTabPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DateTimeTabPage.resx">
       <DependentUpon>DateTimeTabPage.cs</DependentUpon>
     </EmbeddedResource>
@@ -145,12 +151,6 @@
       <DependentUpon>ResourcesNet45.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="TemperatureChartTabPage.resx">
-      <DependentUpon>TemperatureChartTabPage.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="TemperatureTabPage.resx">
-      <DependentUpon>TemperatureTabPage.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\SettingsNet45.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>SettingsNet45.Designer.cs</LastGenOutput>
@@ -198,10 +198,13 @@
     <Content Include="Resources\Back16x16.png" />
     <Content Include="Resources\Cab32x32.png" />
     <Content Include="Resources\Chart32x32.png" />
+    <None Include="Resources\Temperature16x16.png" />
+    <None Include="Resources\Clear16x16.png" />
     <Content Include="Resources\Clock32x32.png" />
     <Content Include="Resources\Connection32x32.png" />
     <Content Include="Resources\DataBase32x32.png" />
     <Content Include="Resources\FileOpen32x32.png" />
+    <None Include="Resources\multiply16x16.png" />
     <Content Include="Resources\QueryDelete32x32.png" />
     <Content Include="Resources\Refresh16x16.png" />
     <Content Include="Resources\Refresh32x32.png" />
