Logger App: Chart printing. Firmware: integer to char array, with neg. numbers.

--- a/Statemachine_ST7783_ADC/App/CSharp/LoggerVS08/Logger/Logger/Logger.csproj
+++ b/Statemachine_ST7783_ADC/App/CSharp/LoggerVS08/Logger/Logger/Logger.csproj
@@ -229,6 +229,7 @@
     <None Include="Resources\Save16x16.png" />
     <Content Include="Resources\Clear16x16.png" />
     <Content Include="Resources\Multiply16x16.png" />
+    <Content Include="Resources\Print16x16.png" />
     <Content Include="Resources\Temperature16x16.png" />
     <Content Include="Resources\RefreshBlue16x16.png" />
     <Content Include="Resources\RefreshBlue32x32.png" />
